# cookiecutter-celery-subpackage-service

./: CHANGELOG.md  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_dir}}/: README  setup.cfg  setup.py
{{cookiecutter.project_dir}}/src/{{cookiecutter.namespace}}.{{cookiecutter.subpackage}}/: tasks.py
{{cookiecutter.project_dir}}/{{cookiecutter.namespace}}.{{cookiecutter.subpackage}}/: app.py
{{cookiecutter.project_slug}}/: README.md  setup.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.namespace}}.{{cookiecutter.subpackage}}/: __init__.py
