[metadata]
name = {{cookiecutter.project_slug}}
description = {{cookiecutter.description}}
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find_namespace:

namespace_packages = 
{%- for item in cookiecutter.namespace.split('.') %}
    {{item}}
{%- endfor %}

install_requires =
    Celery<5.0,>=4.3

[options.packages.find_namespace]
where = src
