{%- set namespace_parts = cookiecutter.namespace.split('.') -%}
[metadata]
name = {{cookiecutter.project_slug}}
description = {{cookiecutter.description}}
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    Celery<5.0,>=4.3

package_dir =
    = src
packages = find_namespace:
namespace_packages = 
{%- for n in range(namespace_parts|length) %}
    {{ namespace_parts[0:n+1]|join(".") }}
{%- endfor %}

[options.packages.find]
where = src
