{%- set namespace_parts = cookiecutter.namespace.split('.') -%}
[metadata]
name = {{cookiecutter.project_slug}}
description = {{cookiecutter.description}}
{% if cookiecutter.readme_format == "Markdown" -%}
long_description = file: README.md
long_description_content_type = text/markdown
{%- elif cookiecutter.readme_format == "reStructuredText" -%}
long_description = file: README.rst
{%- else -%}
long_description = file: README
long_description_content_type = text/plain
{%- endif %}

[options]
install_requires =
    Celery<5.0,>=4.3

{% if cookiecutter.src_dir is sameas true -%}
package_dir =
    = src
{%- endif %}
packages = find_namespace:
namespace_packages = 
{%- for n in range(namespace_parts|length) %}
    {{ namespace_parts[0:n+1]|join(".") }}
{%- endfor %}

[options.packages.find]
{%- if cookiecutter.src_dir is sameas true %}
where = src
{%- else %}
include = 
    {{ cookiecutter.namespace }}.*
{%- endif %}
